cambie el nombre de las imagenes

--- a/remeras.html
+++ b/remeras.html
@@ -13,8 +13,7 @@
     <header>
         <nav class="barra">
             <div class="contenedor-marca">
-                <a href="index.html"><img src="./img/Urban-Crow-4-2-2025.png" alt="Logo" class="marca"> 
-                </a>
+                <a href="index.html"><img src="./img/UrbanCrowLogo.png" alt="Logo" class="marca"></a>
             </div>
             <ul class="menu">
                 <div class="contedor-enlace-menu">
@@ -30,7 +29,7 @@
         </header>
 <section>
     <div class="contenedor-gif">
-        <img src="./img/gif_logo_2.gif" frameborder="0" class="gif"></img> 
+        <img src="./img/GifLogo.gif" frameborder="0" class="gif"></img> 
     </div>
     <h1 class="titulos">nuestras remeras de marcas</h1>
 </section>
@@ -63,25 +62,25 @@
     </section>          
     <section class="catalogo">
             <div class="producto">
-                <a href="carrito.html" class="contenedor-imagen"><img src="img/baby tee (1).jpg" alt="remera baby tee 1" class="imagen">
+                <a href="carrito.html" class="contenedor-imagen"><img src="img/BabyTee1.jpg" alt="remera baby tee 1" class="imagen">
                 <p class="texto">remera baby tee 1 </p>
                 <p class="texto">12.999</p> 
                 </a>     
             </div>
             <div class="producto">
-                <a href="carrito.html" class="contenedor-imagen"><img src="img/remera overside (2).jpg" alt="remera overside 2" class="imagen">
+                <a href="carrito.html" class="contenedor-imagen"><img src="img/RemeraOverside1.jpg" alt="remera overside 2" class="imagen">
                 <p class="texto">remera overside 2 </p>
                 <p class="texto">12.999</p> 
                 </a>     
             </div>
             <div class="producto">
-                <a href="carrito.html" class="contenedor-imagen"><img src="img/remera overside (3).jpg" alt="remera overside 3" class="imagen">
+                <a href="carrito.html" class="contenedor-imagen"><img src="img/RemeraOverside3.jpg" alt="remera overside 3" class="imagen">
                 <p class="texto">remera overside 3 </p>
                 <p class="texto">12.999</p> 
                 </a>     
             </div>
             <div class="producto">
-                <a href="carrito.html" class="contenedor-imagen"><img src="img/remera overside (4).jpg" alt="remera overside 4" class="imagen">
+                <a href="carrito.html" class="contenedor-imagen"><img src="img/RemeraOverside4.jpg" alt="remera overside 4" class="imagen">
                 <p class="texto">remera overside </p>
                 <p class="texto">12.99</p> 
                 </a>     
@@ -143,9 +142,9 @@
             <input type="text" name="email" id="email" placeholder="ingrese su email" required class="e-mail">
         </div>
         <ul class="otras-redes">
-            <li><a href="https://www.instagram.com/" target="_blank" class="redes"><img src="./img/logo_ig.png" alt="instagram logo" class="logo"></a></li>
-            <li><a href="https://www.facebook.com/" target="_blank" class="redes"><img src="./img/logo_facebook.png" alt="facebook logo" class="logo"></a></li>
-            <li><a href="https://www.x.com/" target="_blank" class="redes"><img src="./img/logo_X.png" alt="x Logo" class="logo"></a></li>
+            <li><a href="https://www.instagram.com/" target="_blank" class="redes"><img src="./img/LogoIg.png" alt="instagram logo" class="logo"></a></li>
+            <li><a href="https://www.facebook.com/" target="_blank" class="redes"><img src="./img/LogoFacebook.png" alt="facebook logo" class="logo"></a></li>
+            <li><a href="https://www.x.com/" target="_blank" class="redes"><img src="./img/LogoX.png" alt="x Logo" class="logo"></a></li>
         </ul>
     </section>
     <p class="copy">&copy;  Copyright - 2025 - 2031 www.urbancrow.com.ar, TODOS LOS DERECHOS RESERVADOS. Las fotos contenidas en este site, el logotipo y las marcas son propiedad de www.urbancrow.com.ar y/o de sus respectivos titulares. Está prohibida la reproducción total o parcial, sin la expresa autorización de la administradora de la tienda virtual</p>
