--- a/carrito.html
+++ b/carrito.html
@@ -13,7 +13,7 @@
     <header>
         <nav class="barra">
             <div class="contenedor-marca">
-                <a href="index.html"><img src="./img/Urban-Crow-4-2-2025.png" alt="Logo" class="marca"> </a>
+                <a href="index.html"><img src="./img/UrbanCrowLogo.png" alt="Logo" class="marca"></a>
             </div>
             <ul class="menu">
                 <div class="contedor-enlace-menu">
@@ -31,9 +31,9 @@
           
 <main>
     </div>
-        <img src="./img/gif_logo_2.gif" frameborder="0" class="gif"></img>
+        <img src="./img/GifLogo.gif" frameborder="0" class="gif"></img>
     </div> 
-    <h1>Carrito de Compras</h1>
+    <h1 class="titulos">Carrito de Compras</h1>
     <div>
         <table class="carrito">
             <thead class="carrito-head">
@@ -62,7 +62,7 @@
     </div>
     <section class="total">   
         <button class="compra">
-            <span texto-button>Finalizar Compra</span> 
+            <span class="texto-boton">Finalizar Compra</span> 
             <span class="monto">Total: $50.00</span>
         </button>
     </section>
@@ -74,9 +74,9 @@
             <input type="text" name="email" id="email" placeholder="ingrese su email" required class="e-mail">
         </div>
         <ul class="otras-redes">
-            <li><a href="https://www.instagram.com/" target="_blank" class="redes"><img src="./img/logo_ig.png" alt="instagram logo" class="logo"></a></li>
-            <li><a href="https://www.facebook.com/" target="_blank" class="redes"><img src="./img/logo_facebook.png" alt="facebook logo" class="logo"></a></li>
-            <li><a href="https://www.x.com/" target="_blank" class="redes"><img src="./img/logo_X.png" alt="x Logo" class="logo"></a></li>
+            <li><a href="https://www.instagram.com/" target="_blank" class="redes"><img src="./img/LogoIg.png" alt="instagram logo" class="logo"></a></li>
+            <li><a href="https://www.facebook.com/" target="_blank" class="redes"><img src="./img/LogoFacebook.png" alt="facebook logo" class="logo"></a></li>
+            <li><a href="https://www.x.com/" target="_blank" class="redes"><img src="./img/LogoX.png" alt="x Logo" class="logo"></a></li>
         </ul>
     </section>
     <p class="copy">&copy;  Copyright - 2025 - 2031 www.urbancrow.com.ar, TODOS LOS DERECHOS RESERVADOS. Las fotos contenidas en este site, el logotipo y las marcas son propiedad de www.urbancrow.com.ar y/o de sus respectivos titulares. Está prohibida la reproducción total o parcial, sin la expresa autorización de la administradora de la tienda virtual</p>
