--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     <header>
     <nav class="barra">
         <div>
-            <a href="index.html"><img src="./img/Urban-Crow-4-2-2025.png" alt="Logo" class="marca"> 
-            </a>
+            <a href="index.html"><img src="./img/UrbanCrowLogo.png" alt="Logo" class="marca"></a>
         </div>
         <ul class="menu">
             <div class="contedor-enlace-menu">
@@ -31,7 +30,7 @@
     </header>
 <section>
     <div class="contenedor-gif">
-        <img src="./img/gif_logo_2.gif" frameborder="0" class="gif"></img> 
+        <img src="./img/GifLogo.gif" frameborder="0" class="gif"></img>
     </div>
 </section>
 <main>
@@ -225,9 +224,9 @@
             <input type="text" name="email" id="email" placeholder="ingrese su email" required class="e-mail">
         </div>
         <ul class="otras-redes">
-            <li><a href="https://www.instagram.com/" target="_blank" class="redes"><img src="./img/logo_ig.png" alt="instagram logo" class="logo"></a></li>
-            <li><a href="https://www.facebook.com/" target="_blank" class="redes"><img src="./img/logo_facebook.png" alt="facebook logo" class="logo"></a></li>
-            <li><a href="https://www.x.com/" target="_blank" class="redes"><img src="./img/logo_X.png" alt="x Logo" class="logo"></a></li>
+            <li><a href="https://www.instagram.com/" target="_blank" class="redes"><img src="./img/LogoIg.png" alt="instagram logo" class="logo"></a></li>
+            <li><a href="https://www.facebook.com/" target="_blank" class="redes"><img src="./img/LogoFacebook.png" alt="facebook logo" class="logo"></a></li>
+            <li><a href="https://www.x.com/" target="_blank" class="redes"><img src="./img/LogoX.png" alt="x Logo" class="logo"></a></li>
         </ul>
     </section>
     <p class="copy">&copy;  Copyright - 2025 - 2031 www.urbancrow.com.ar, TODOS LOS DERECHOS RESERVADOS. Las fotos contenidas en este site, el logotipo y las marcas son propiedad de www.urbancrow.com.ar y/o de sus respectivos titulares. Está prohibida la reproducción total o parcial, sin la expresa autorización de la administradora de la tienda virtual</p>
