--- a/index.html
+++ b/index.html
@@ -4,10 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
-    <title>pagina principal | UC</title>
+    <title>Urban Crow | Ropa Alternativa</title>
+   
+    <meta name="description" content="Urban Crow te ofrece ropa alternativa en Córdoba y Argentina. Descubre remeras, accesorios y más con las mejores ofertas.">
+    <meta name="keywords" content="ropa alternativa, Córdoba, Argentina, remeras, accesorios, ofertas">
+    <link rel="canonical" href="https://www.urbancrow.com.ar/">
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jersey+15&display=swap" rel="stylesheet">
+
+    <script type="application/ld+json">
+        {
+          "@context": "https://schema.org",
+          "@type": "Store",
+          "name": "Urban Crow",
+          "image": "https://www.urbancrow.com.ar/img/imagen-destacada.jpg",
+          "url": "https://www.urbancrow.com.ar/",
+          "telephone": "+54-XXX-XXXXXXX",
+          "address": {
+            "@type": "PostalAddress",
+            "streetAddress": "Dirección",
+            "addressLocality": "Córdoba",
+            "addressRegion": "Córdoba",
+            "postalCode": "5000",
+            "addressCountry": "AR"
+          },
+          "description": "Tienda online de ropa alternativa en Córdoba y Argentina. Remeras, accesorios y mucho más con ofertas exclusivas."
+        }
+    </script>
 </head>
 <body>
     <header>
@@ -38,79 +63,79 @@
     <section class="contenedor-slider">
         <div class="slider">
             <div class="producto-slider">
-                <a href="carrito.html"><img src="img/lentes (4).jpeg" alt="lentes 4" class="imagen-slider">
+                <a href="carrito.html"><img src="img/Lentes4.jpeg" alt="lentes 4" class="imagen-slider">
                     <p class="texto">lentes 4</p>
                     <p class="texto">12.999</p>
                 </a>     
             </div>
             <div class="producto-slider">
-                <a href="carrito.html"><img src="img/remera overside (2).jpg" alt="remera overside 2" class="imagen-slider">
+                <a href="carrito.html"><img src="img/RemeraOverside2.jpg" alt="remera overside 2" class="imagen-slider">
                     <p class="texto">remera overside 2</p>
                     <p class="texto">12.999</p>
                 </a>
             </div>
             <div class="producto-slider">
-                <a href="carrito.html"><img src="img/remera overside (3).jpg" alt="remera overside 3" class="imagen-slider">
+                <a href="carrito.html"><img src="img/RemeraOverside3.jpg" alt="remera overside 3" class="imagen-slider">
                     <p class="texto">remera overside 3</p>
                     <p class="texto">12.999</p>
                 </a>     
             </div>
             <div class="producto-slider">
-                <a href="carrito.html"><img src="img/anillos (1).jfif" alt="anillo 1" class="imagen-slider">
+                <a href="carrito.html"><img src="img/Anillos1.jpeg" alt="anillo 1" class="imagen-slider">
                     <p class="texto">anillo 1 </p>
                     <p class="texto">12.999</p>
                 </a>     
            </div>
            <div class="producto-slider">
-            <a href="carrito.html"><img src="img/lentes (4).jpeg" alt="lentes 4" class="imagen-slider">
+            <a href="carrito.html"><img src="img/Lentes4.jpeg" alt="lentes 4" class="imagen-slider">
                 <p class="texto">lentes 4</p>
                 <p class="texto">12.999</p>
             </a>     
             </div>
             <div class="producto-slider">
-            <a href="carrito.html"><img src="img/remera overside (2).jpg" alt="remera overside 2" class="imagen-slider">
+            <a href="carrito.html"><img src="img/RemeraOverside2.jpg" alt="remera overside 2" class="imagen-slider">
                     <p class="texto">remera overside 2</p>
                     <p class="texto">12.999</p>
                 </a>
             </div>
             <div class="producto-slider">
-            <a href="carrito.html"><img src="img/remera overside (3).jpg" alt="remera overside 3" class="imagen-slider">
+            <a href="carrito.html"><img src="img/RemeraOverside3.jpg" alt="remera overside 3" class="imagen-slider">
                     <p class="texto">remera overside 3</p>
                     <p class="texto">12.999</p>
                 </a>     
             </div>
             <div class="producto-slider">
-            <a href="carrito.html"><img src="img/anillos (1).jfif" alt="anillo 1" class="imagen-slider">
+            <a href="carrito.html"><img src="img/Anillos1.jpeg" alt="anillo 1" class="imagen-slider">
                     <p class="texto">anillo 1 </p>
                     <p class="texto">12.999</p>
                 </a>     
             </div>
             <div class="producto-slider">
-                <a href="carrito.html"><img src="img/anillos (1).jfif" alt="anillo 1" class="imagen-slider">
+                <a href="carrito.html"><img src="img/Anillos1.jpeg" alt="anillo 1" class="imagen-slider">
                     <p class="texto">anillo 1 </p>
                     <p class="texto">12.999</p>
                 </a>     
            </div>
            <div class="producto-slider">
-            <a href="carrito.html"><img src="img/lentes (4).jpeg" alt="lentes 4" class="imagen-slider">
+            <a href="carrito.html"><img src="img/Lentes4.jpeg" alt="lentes 4" class="imagen-slider">
                 <p class="texto">lentes 4</p>
                 <p class="texto">12.999</p>
             </a>     
             </div>
             <div class="producto-slider">
-            <a href="carrito.html"><img src="img/remera overside (2).jpg" alt="remera overside 2" class="imagen-slider">
+            <a href="carrito.html"><img src="img/RemeraOverside2.jpg" alt="remera overside 2" class="imagen-slider">
                     <p class="texto">remera overside 2</p>
                     <p class="texto">12.999</p>
                 </a>
             </div>
             <div class="producto-slider">
-            <a href="carrito.html"><img src="img/remera overside (3).jpg" alt="remera overside 3" class="imagen-slider">
+            <a href="carrito.html"><img src="img/RemeraOverside3.jpg" alt="remera overside 3" class="imagen-slider">
                     <p class="texto">remera overside 3</p>
                     <p class="texto">12.999</p>
                 </a>     
             </div>
             <div class="producto-slider">
-            <a href="carrito.html"><img src="img/anillos (1).jfif" alt="anillo 1" class="imagen-slider">
+            <a href="carrito.html"><img src="img/Anillos1.jpeg" alt="anillo 1" class="imagen-slider">
                     <p class="texto">anillo 1 </p>
                     <p class="texto">12.999</p>
                 </a>     
@@ -120,97 +145,97 @@
     <h2 class="titulos">Pagina principal</h2>
     <section class="catalogo-principal"> 
             <div class="producto-principal">
-                <a href="carrito.html" class="contenedor-imagen"><img src="img/lentes (4).jpeg" alt="lentes 4" class="imagen-principal">
+                <a href="carrito.html" class="contenedor-imagen"><img src="img/Lentes4.jpeg" alt="lentes 4" class="imagen-principal">
                     <p class="texto">lentes 4</p>
                     <p class="texto">12.999</p>
              </a>     
             </div>
             <div class="producto-principal">
-                <a href="carrito.html" class="contenedor-imagen"><img src="img/remera overside (2).jpg" alt="remera overside 2" class="imagen-principal">
+                <a href="carrito.html" class="contenedor-imagen"><img src="img/RemeraOverside2.jpg" alt="remera overside 2" class="imagen-principal">
                     <p class="texto">remera overside 2</p>
                     <p class="texto">12.999</p>
                 </a>
             </div>
             <div class="producto-principal">
-                <a href="carrito.html" class="contenedor-imagen"><img src="img/remera overside (3).jpg" alt="remera overside 3" class="imagen-principal">
+                <a href="carrito.html" class="contenedor-imagen"><img src="img/RemeraOverside3.jpg" alt="remera overside 3" class="imagen-principal">
                     <p class="texto">remera overside 3</p>
                     <p class="texto">12.999</p>
                 </a>     
             </div>
             <div class="producto-principal">
-                <a href="carrito.html" class="contenedor-imagen"><img src="img/anillos (1).jfif" alt="anillo 1" class="imagen-principal">
+                <a href="carrito.html" class="contenedor-imagen"><img src="img/Anillos1.jpeg" alt="anillo 1" class="imagen-principal">
                     <p class="texto">anillo 1</p>
                     <p class="texto">12.999</p>
                 </a>     
             </div>
             <div class="producto-principal">
-                <a href="carrito.html" class="contenedor-imagen"><img src="img/lentes (4).jpeg" alt="lentes 4" class="imagen-principal">
+                <a href="carrito.html" class="contenedor-imagen"><img src="img/Lentes4.jpeg" alt="lentes 4" class="imagen-principal">
                     <p class="texto">lentes 4</p>
                     <p class="texto">12.999</p>
              </a>     
             </div>
             <div class="producto-principal">
-                <a href="carrito.html" class="contenedor-imagen"><img src="img/remera overside (2).jpg" alt="remera overside 2" class="imagen-principal">
+                <a href="carrito.html" class="contenedor-imagen"><img src="img/RemeraOverside2.jpg" alt="remera overside 2" class="imagen-principal">
                     <p class="texto">remera overside 2</p>
                     <p class="texto">12.999</p>
                 </a>
             </div>
             <div class="producto-principal">
-                <a href="carrito.html" class="contenedor-imagen"><img src="img/remera overside (3).jpg" alt="remera overside 3" class="imagen-principal">
+                <a href="carrito.html" class="contenedor-imagen"><img src="img/RemeraOverside3.jpg" alt="remera overside 3" class="imagen-principal">
                     <p class="texto">remera overside 3</p>
                     <p class="texto">12.999</p>
                 </a>     
             </div>
             <div class="producto-principal">
-                <a href="carrito.html" class="contenedor-imagen"><img src="img/anillos (1).jfif" alt="anillo 1" class="imagen-principal">
+                <a href="carrito.html" class="contenedor-imagen"><img src="img/Anillos1.jpeg" alt="anillo 1" class="imagen-principal">
                     <p class="texto">anillo 1</p>
                     <p class="texto">12.999</p>
                 </a>     
             </div>
             <div class="producto-principal">
-                <a href="carrito.html" class="contenedor-imagen"><img src="img/lentes (4).jpeg" alt="lentes 4" class="imagen-principal">
+                <a href="carrito.html" class="contenedor-imagen"><img src="img/Lentes4.jpeg" alt="lentes 4" class="imagen-principal">
                     <p class="texto">lentes 4</p>
                     <p class="texto">12.999</p>
              </a>     
             </div>
             <div class="producto-principal">
-                <a href="carrito.html" class="contenedor-imagen"><img src="img/remera overside (2).jpg" alt="remera overside 2" class="imagen-principal">
+                <a href="carrito.html" class="contenedor-imagen"><img src="img/RemeraOverside2.jpg" alt="remera overside 2" class="imagen-principal">
                     <p class="texto">remera overside 2</p>
                     <p class="texto">12.999</p>
                 </a>
             </div>
             <div class="producto-principal">
-                <a href="carrito.html" class="contenedor-imagen"><img src="img/remera overside (3).jpg" alt="remera overside 3" class="imagen-principal">
+                <a href="carrito.html" class="contenedor-imagen"><img src="img/RemeraOverside3.jpg" alt="remera overside 3" class="imagen-principal">
                     <p class="texto">remera overside 3</p>
                     <p class="texto">12.999</p>
                 </a>     
             </div>
             <div class="producto-principal">
-                <a href="carrito.html" class="contenedor-imagen"><img src="img/anillos (1).jfif" alt="anillo 1" class="imagen-principal">
+                <a href="carrito.html" class="contenedor-imagen"><img src="img/Anillos1.jpeg" alt="anillo 1" class="imagen-principal">
                     <p class="texto">anillo 1</p>
                     <p class="texto">12.999</p>
                 </a>     
             </div>
             <div class="producto-principal">
-                <a href="carrito.html" class="contenedor-imagen"><img src="img/lentes (4).jpeg" alt="lentes 4" class="imagen-principal">
+                <a href="carrito.html" class="contenedor-imagen"><img src="img/Lentes4.jpeg" alt="lentes 4" class="imagen-principal">
                     <p class="texto">lentes 4</p>
                     <p class="texto">12.999</p>
              </a>     
             </div>
             <div class="producto-principal">
-                <a href="carrito.html" class="contenedor-imagen"><img src="img/remera overside (2).jpg" alt="remera overside 2" class="imagen-principal">
+                <a href="carrito.html" class="contenedor-imagen"><img src="img/RemeraOverside2.jpg" alt="remera overside 2" class="imagen-principal">
                     <p class="texto">remera overside 2</p>
                     <p class="texto">12.999</p>
                 </a>
             </div>
             <div class="producto-principal">
-                <a href="carrito.html" class="contenedor-imagen"><img src="img/remera overside (3).jpg" alt="remera overside 3" class="imagen-principal">
+                <a href="carrito.html" class="contenedor-imagen"><img src="img/RemeraOverside3.jpg" alt="remera overside 3" class="imagen-principal">
                     <p class="texto">remera overside 3</p>
                     <p class="texto">12.999</p>
                 </a>     
             </div>
             <div class="producto-principal">
-                <a href="carrito.html" class="contenedor-imagen"><img src="img/anillos (1).jfif" alt="anillo 1" class="imagen-principal">
+                <a href="carrito.html" class="contenedor-imagen"><img src="img/Anillos1.jpeg" alt="anillo 1" class="imagen-principal">
                     <p class="texto">anillo 1</p>
                     <p class="texto">12.999</p>
                 </a>     
