--- a/accesorios.html
+++ b/accesorios.html
@@ -8,7 +8,7 @@
 
     <meta name="description" content="Urban Crow te ofrece ropa alternativa en Córdoba y Argentina. Descubre remeras, accesorios y más con las mejores ofertas.">
     <meta name="keywords" content="accesorios importado,anillos originales,accesorios moda alternativa,accesorios únicos para outfits urbanos,tienda online de collares, anillos y lentes en Argentina urban crow, moda córdoba, remeras diseño, streetwear argentina">
-    <link rel="canonical" href="https://www.urbancrow-remeras.com.ar/">
+    <link rel="canonical" href="https://www.urbancrow-accesorios.com.ar/">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -82,73 +82,73 @@
     <!-- productos -->
     <section class="catalogo">
             <div class="producto">
-                <a href="carrito.html" class="contenedor-imagen"><img src="img/collares (3).jpeg" alt="collar_3"class="imagen">
+                <a href="carrito.html" class="contenedor-imagen"><img src="img/Collares3.jpeg" alt="collar_3"class="imagen">
                     <p class="texto">collar 3 </p>
                     <p class="texto"> 12.999</p> 
                 </a>     
             </div>
             <div class="producto">
-                <a href="carrito.html" class="contenedor-imagen"><img src="img/lentes (1).jpeg" alt="lentes_1"class="imagen">
+                <a href="carrito.html" class="contenedor-imagen"><img src="img/Lentes1.jpeg" alt="lentes_1"class="imagen">
                     <p class="texto">lentes 1</p>
                     <p class="texto"> 12.999</p> 
                 </a>     
             </div>
             <div class="producto">
-                <a href="carrito.html" class="contenedor-imagen"><img src="img/anillos (2).jpeg" alt="anillos_4"class="imagen">
+                <a href="carrito.html" class="contenedor-imagen"><img src="img/Anillos2.jpeg" alt="anillos_4"class="imagen">
                     <p class="texto">anillo 4</p>
                     <p class="texto"> 12.999</p> 
                 </a>     
             </div>
             <div class="producto"> 
-                <a href="carrito.html" class="contenedor-imagen"><img src="img/collares (2).jpeg" alt="collares_2"class="imagen">
+                <a href="carrito.html" class="contenedor-imagen"><img src="img/Collares2.jpeg" alt="collares_2"class="imagen">
                     <p class="texto">collar 2</p>
                     <p class="texto"> 12.999</p> 
                 </a>     
             </div>
             <div class="producto"> 
-                <a href="carrito.html" class="contenedor-imagen"><img src="img/lentes (3).jpeg" alt="lentea_3"class="imagen">
+                <a href="carrito.html" class="contenedor-imagen"><img src="img/Lentes3.jpeg" alt="lentea_3"class="imagen">
                     <p class="texto">lentes 3</p>
                     <p class="texto"> 12.999</p> 
                 </a>     
             </div>
             <div class="producto">   
-                <a href="carrito.html" class="contenedor-imagen"><img src="img/anillos (1).jfif" alt="anillos_1"class="imagen">
+                <a href="carrito.html" class="contenedor-imagen"><img src="img/Anillos1.jpeg" alt="anillos_1"class="imagen">
                     <p class="texto">anillo 1</p>
                     <p class="texto"> 12.999</p> 
                 </a>     
             </div>
             <div class="producto"> 
-                <a href="carrito.html" class="contenedor-imagen"><img src="img/collares (4).jpeg" alt="collares_4"class="imagen">
+                <a href="carrito.html" class="contenedor-imagen"><img src="img/Collares4.jpeg" alt="collares_4"class="imagen">
                     <p class="texto">collar 4</p>
                     <p class="texto"> 12.999</p> 
                  </a>    
             </div>
             <div class="producto">
-                <a href="carrito.html" class="contenedor-imagen"><img src="img/lentes (2).jpeg" alt="lentes_2"class="imagen">
+                <a href="carrito.html" class="contenedor-imagen"><img src="img/Lentes2.jpeg" alt="lentes_2"class="imagen">
                     <p class="texto">lentes 2</p>
                     <p class="texto"> 12.999</p> 
                 </a>     
             </div>
             <div class="producto"> 
-                <a href="carrito.html" class="contenedor-imagen"><img src="img/anillos (2).jfif" alt="anillos_3"class="imagen">
-                    <p class="texto">anillo 4</p>
+                <a href="carrito.html" class="contenedor-imagen"><img src="img/Anillos2.jpeg" alt="anillos_2"class="imagen">
+                    <p class="texto">anillo 2</p>
                     <p class="texto"> 12.999</p> 
                 </a>     
             </div>
             <div class="producto">
-                <a href="carrito.html" class="contenedor-imagen"><img src="img/lentes (4).jpeg" alt="lentes_4"class="imagen">
+                <a href="carrito.html" class="contenedor-imagen"><img src="img/Lentes4.jpeg" alt="lentes_4"class="imagen">
                     <p class="texto">lentes 4</p>
                     <p class="texto"> 12.999</p> 
                 </a>     
             </div>
             <div class="producto">
-                <a href="carrito.html" class="contenedor-imagen"><img src="img/collares (1).jpeg" alt="collar_1"class="imagen">
+                <a href="carrito.html" class="contenedor-imagen"><img src="img/Collares1.jpeg" alt="collar_1"class="imagen">
                     <p class="texto">collar 1</p>
                     <p class="texto">12.999 </p> 
                 </a>     
             </div>
             <div class="producto"> 
-                <a href="carrito.html" class="contenedor-imagen"><img src="img/anillos (1).jpeg" alt="anillo_2"class="imagen">
+                <a href="carrito.html" class="contenedor-imagen"><img src="img/Anillos2.jpeg" alt="anillo_2"class="imagen">
                     <p class="texto">anillo 2</p>
                     <p class="texto"> 12.999</p> 
                 </a>     
