--- a/carrito.html
+++ b/carrito.html
@@ -4,10 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
-    <title>carrito|UC</title>
+    <title>carrito|Urban Crow</title>
+
+
+    <meta name="description" content="Urban Crow te ofrece ropa alternativa en Córdoba y Argentina. Descubre remeras, accesorios y más con las mejores ofertas.">
+    <link rel="canonical" href="https://www.urbancrow-carrito.com.ar/">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jersey+15&display=swap" rel="stylesheet">
+
+    <script type="application/ld+json">
+        {
+          "@context": "https://schema.org",
+          "@type": "Store",
+          "name": "Urban Crow",
+          "image": "https://www.urbancrow.com.ar/img/imagen-destacada.jpg",
+          "url": "https://www.urbancrow.com.ar/",
+          "telephone": "+54-XXX-XXXXXXX",
+          "address": {
+            "@type": "PostalAddress",
+            "streetAddress": "Dirección",
+            "addressLocality": "Córdoba",
+            "addressRegion": "Córdoba",
+            "postalCode": "5000",
+            "addressCountry": "AR"
+          },
+          "description": "Tienda online de ropa alternativa en Córdoba y Argentina. Remeras, accesorios y mucho más con ofertas exclusivas."
+        }
+    </script>
 </head>
 <body>
     <header>
