--- a/contacto.html
+++ b/contacto.html
@@ -4,12 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <link rel="stylesheet" href="./css/styles.css">
-    <title>contacto|UC</title>
+    <title>contacto|Urban Crow</title>
    
+    
+    <meta name="description" content="Urban Crow te ofrece ropa alternativa en Córdoba y Argentina. Descubre remeras, accesorios y más con las mejores ofertas.">
+    <meta name="keywords" content="accesorios importado,anillos originales,accesorios moda alternativa,accesorios únicos para outfits urbanos,tienda online de collares, anillos y lentes en Argentina urban crow, moda córdoba, remeras diseño, streetwear argentina">
+    <link rel="canonical" href="https://www.urbancrow-contacto.com.ar/">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jersey+15&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+    <script type="application/ld+json">
+        {
+          "@context": "https://schema.org",
+          "@type": "Store",
+          "name": "Urban Crow",
+          "image": "https://www.urbancrow.com.ar/img/imagen-destacada.jpg",
+          "url": "https://www.urbancrow.com.ar/",
+          "telephone": "+54-XXX-XXXXXXX",
+          "address": {
+            "@type": "PostalAddress",
+            "streetAddress": "Dirección",
+            "addressLocality": "Córdoba",
+            "addressRegion": "Córdoba",
+            "postalCode": "5000",
+            "addressCountry": "AR"
+          },
+          "description": "Tienda online de ropa alternativa en Córdoba y Argentina. Remeras, accesorios y mucho más con ofertas exclusivas."
+        }
+    </script>
+    
 </head>
 <body>
     <header>
